Fixed some spacing issues with the new home page background image

--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -1,8 +1,10 @@
 .hero-home {
-  background: $purple-1 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/home-page-1003.png") 50% 0 no-repeat;
+  background: $purple-5 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/home-page-1003.png") 20% 0 no-repeat;
   color: $white;
+  background-size: cover;
+  min-height: 1000px;
   @include breakpoint(md-min) {
-    background: $purple-1 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/home-page-1003.png") no-repeat;
+    background: $purple-5 url("https://s3-eu-west-1.amazonaws.com/learnsignal3-production/public/home-page-1003.png") no-repeat;
     background-size: cover;
   }
 }
